--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
-    "react-icons": "^3.9.0"
+    "react-icons": "^3.9.0",
+    "simple-react-lightbox": "^3.2.3-3"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
