basic set up with printful - wip

--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-offline": "^3.1.2",
     "gatsby-plugin-react-helmet": "^3.2.1",
-    "gatsby-plugin-sharp": "^2.5.4",
+    "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-plugin-snipcart": "^1.1.2",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-contentful": "^2.2.7",
     "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-source-printful": "^2.3.1",
     "gatsby-transformer-sharp": "^2.4.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
